--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^3.11.1",
+    "babel-plugin-superjson-next": "^0.4.3",
     "next": "12.1.4",
     "react": "18.0.0",
     "react-dom": "18.0.0",
